helper scripts created

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ paper.txt
 
 # Project progress log (local only for AI/dev context)
 _PROJECT_PROGRESS.md
+Handovernote.md
 
 # Existing .gitignore content (from initial commit)
 # Binaries for programs and plugins
